# modern_python_monorepo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLI_Features.md  CLI_features_missing.md  CODE_REVIEW.md  LICENSE  MPM_TOML_IMPLEMENTATION_PLAN.md  README.md  TODO.md  docker-bake.hcl  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: pr.yml  release.yml
apps/mpm/: pyproject.toml
apps/mpm-cli/: README.md  pyproject.toml
apps/mpm-cli/src/mpm/: __init__.py  cli.py  config.py  prompts.py  utils.py
apps/mpm-cli/src/mpm/generators/: __init__.py  features.py  package.py  project.py  renderer.py
apps/mpm-cli/src/mpm/templates/: __init__.py
apps/mpm-cli/src/mpm/templates/base/: .gitignore  .python-version.jinja  AGENTS.md.jinja  LICENSE.jinja  README.md.jinja  mpm.toml.jinja  pyproject.toml.jinja
apps/mpm-cli/src/mpm/templates/ci/: pr.yml.jinja  release.yml.jinja
apps/mpm-cli/src/mpm/templates/docker/: Dockerfile.jinja  docker-bake.hcl.jinja  docker-compose.yml.jinja
apps/mpm-cli/src/mpm/templates/docs/material/: mkdocs.yml.jinja
apps/mpm-cli/src/mpm/templates/docs/shadcn/: mkdocs.yml.jinja
apps/mpm-cli/src/mpm/templates/monorepo/apps/: __init__.py.jinja  pyproject.toml.jinja
apps/mpm-cli/src/mpm/templates/monorepo/libs/: __init__.py.jinja  pyproject.toml.jinja  test_import.py.jinja
apps/mpm-cli/src/mpm/templates/samples/greeter/: pyproject.toml.jinja
apps/mpm-cli/src/mpm/templates/samples/printer/: __init__.py.jinja
apps/mpm-cli/src/mpm/templates/single/: __init__.py.jinja  test_import.py.jinja
apps/mpm-cli/src/mpm/templates/vscode/: extensions.json  settings.json.jinja
apps/mpm-cli/tests/: __init__.py  conftest.py  test_add_features.py  test_binary_integration.py  test_cli.py  test_config.py  test_e2e.py  test_integration.py  test_renderer.py  test_utils.py
apps/mpm/modern_python_monorepo/mpm/: __init__.py  cli.py  config.py  prompts.py
apps/mpm/modern_python_monorepo/mpm/generators/: __init__.py  ci.py  docker.py  docs.py  package.py  project.py  renderer.py
apps/mpm/modern_python_monorepo/mpm/templates/: __init__.py
apps/mpm/modern_python_monorepo/mpm/templates/base/: .gitignore  LICENSE.jinja  README.md.jinja  main.py.jinja  pyproject.toml.jinja
apps/mpm/modern_python_monorepo/mpm/templates/ci/.github/workflows/: pr.yml.jinja  release.yml.jinja
apps/mpm/modern_python_monorepo/mpm/templates/docker/: .dockerignore  docker-bake.hcl.jinja  docker-compose.yml.jinja
apps/mpm/modern_python_monorepo/mpm/templates/docs/material/: mkdocs.yml.jinja
apps/mpm/modern_python_monorepo/mpm/templates/docs/material/docs/: contributing.md  getting-started.md.jinja  index.md.jinja
apps/mpm/modern_python_monorepo/mpm/templates/docs/material/docs/api/: index.md.jinja
apps/mpm/modern_python_monorepo/mpm/templates/docs/material/docs/architecture/: overview.md
apps/mpm/modern_python_monorepo/mpm/templates/docs/material/docs/development/: commands.md  docker.md  setup.md.jinja
apps/mpm/modern_python_monorepo/mpm/templates/docs/shadcn/: mkdocs.yml.jinja
apps/mpm/modern_python_monorepo/mpm/templates/monorepo/apps/__package__/: Dockerfile.jinja  pyproject.toml.jinja
apps/mpm/modern_python_monorepo/mpm/templates/monorepo/apps/__package__/__namespace__/__package__/: __init__.py.jinja
apps/mpm/modern_python_monorepo/mpm/templates/monorepo/apps/__package__/tests/: test_import.py.jinja
apps/mpm/modern_python_monorepo/mpm/templates/monorepo/libs/__package__/__namespace__/__package__/: __init__.py.jinja
apps/mpm/modern_python_monorepo/mpm/templates/monorepo/libs/__package__/tests/: test_import.py.jinja
apps/mpm/modern_python_monorepo/mpm/templates/samples/greeter/: pyproject.toml.jinja
apps/mpm/modern_python_monorepo/mpm/templates/samples/greeter/__namespace__/greeter/: __init__.py.jinja
apps/mpm/modern_python_monorepo/mpm/templates/samples/greeter/tests/: test_greeter.py.jinja
apps/mpm/modern_python_monorepo/mpm/templates/samples/printer/: Dockerfile.jinja  pyproject.toml.jinja
apps/mpm/modern_python_monorepo/mpm/templates/samples/printer/__namespace__/printer/: __init__.py.jinja
apps/mpm/modern_python_monorepo/mpm/templates/samples/printer/tests/: test_printer.py.jinja
apps/mpm/modern_python_monorepo/mpm/templates/single/: pyproject.toml.jinja
apps/mpm/modern_python_monorepo/mpm/templates/single/src/__namespace__/: __init__.py.jinja
apps/mpm/modern_python_monorepo/mpm/templates/single/tests/: test_import.py.jinja
apps/mpm/modern_python_monorepo/mpm/templates/tooling/: .pre-commit-config.yaml
apps/mpm/tests/: test_cli.py  test_config.py  test_generators.py
apps/printer/: Dockerfile  pyproject.toml
apps/printer/gpt-architecture/printer/: __init__.py
apps/printer/gpt_architecture/printer/: __init__.py
apps/printer/modern_python_monorepo/printer/: __init__.py
apps/printer/tests/: test_printer_import.py
docs/: contributing.md  faq.md  getting-started.md  index.md  mpm-technology-choices.md  mpm-toml.md  project-structure.md  technology-choices.md
docs/api/: greeter.md  index.md  printer.md
docs/architecture/: overview.md
docs/cli/: commands.md  compatibility.md  interactive.md  options.md
docs/development/: commands.md  docker.md  setup.md
libs/greeter/: pyproject.toml
libs/greeter/gpt_architecture/greeter/: __init__.py
libs/greeter/modern_python_monorepo/greeter/: __init__.py
libs/greeter/tests/: test_greeter_import.py
