[project]
name = "modern_python_monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "una>=0.7.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "poethepoet>=0.31.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/*", "libs/*"]

[tool.una]
namespace = "modern_python_monorepo"
requires-python = ">=3.13"

# =============================================================================
# Ruff - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins (shadow built-ins)
    "B",      # flake8-bugbear (common bugs)
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern syntax)
    "W",      # pycodestyle warnings
    "RUF",    # Ruff-specific rules
    "T100",   # debugger breakpoints
]

[tool.ruff.lint.isort]
known-first-party = ["modern_python_monorepo"]

# =============================================================================
# ty - Type Checking
# =============================================================================
[tool.ty.environment]
python-version = "3.13"

# =============================================================================
# Pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["apps", "libs"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--doctest-modules -v"

# =============================================================================
# Coverage - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["apps", "libs"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Poe the Poet - Task Runner
# =============================================================================
[tool.poe.tasks]
fmt = "ruff format"
lint = "ruff check --fix"
check = "ty check"
test = "pytest"
cov = "pytest --cov=apps --cov=libs --cov-report=term-missing --cov-report=xml"
all = ["fmt", "lint", "check", "test"]

# CI versions (no auto-fix, stricter)
"ci:fmt" = "ruff format --check"
"ci:lint" = "ruff check"

# prek hooks (Rust-based pre-commit alternative)
hooks = "prek install"
"hooks:run" = "prek run --all-files"
