[project]
name = "modern_python_monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "una>=0.7.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a6",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "poethepoet>=0.31.0",
    # MPM CLI dependencies
    "typer>=0.12.0",
    "questionary>=2.1.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    # Documentation (MkDocs)
    "mkdocs>=1.6.0",
    "mkdocs-shadcn>=0.9.0",
    "mkdocstrings[python]>=0.27.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
    # Pin click to fix mkdocs live reload (https://github.com/mkdocs/mkdocs/issues/4032)
    "click>=8.0,<8.3",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/*", "libs/*"]

[tool.una]
namespace = "modern_python_monorepo"
requires-python = ">=3.13"

# =============================================================================
# Ruff - Linting & Formatting
# =============================================================================
[tool.ruff]
# target-version auto-inferred from project.requires-python
line-length = 120

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins (shadow built-ins)
    "B",    # flake8-bugbear (common bugs)
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern syntax)
    "W",    # pycodestyle warnings
    "RUF",  # Ruff-specific rules
    "T100", # debugger breakpoints
]

[tool.ruff.lint.isort]
known-first-party = ["modern_python_monorepo", "mpm"]

# =============================================================================
# ty - Type Checking (python-version auto-inferred from project.requires-python)
# =============================================================================

# =============================================================================
# Pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["apps", "libs"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--doctest-modules -v"

# =============================================================================
# Coverage - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["apps", "libs"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Poe the Poet - Task Runner
# =============================================================================
[tool.poe.tasks]
fmt = "ruff format"
lint = "ruff check --fix"
check = "ty check"
test = "pytest"
cov = "pytest --cov=apps --cov=libs --cov-report=term-missing --cov-report=xml"
all = ["fmt", "lint", "check", "test"]

# CI versions (no auto-fix, stricter)
"ci:fmt" = "ruff format --check"
"ci:lint" = "ruff check"

# prek hooks (Rust-based pre-commit alternative)
hooks = "prek install"
"hooks:run" = "prek run --all-files"

# Documentation (MkDocs)
docs = "mkdocs serve"
"docs:build" = "mkdocs build"
