[project]
name = "mpm-cli"
version = "0.1.0"
description = "Modern Python Monorepo CLI - Scaffold production-ready Python projects"
authors = []
dependencies = [
    "typer>=0.12.0",
    "questionary>=2.1.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.11"
dynamic = ["una"]

[project.scripts]
mpm = "modern_python_monorepo.mpm.cli:app"

[build-system]
requires = ["hatchling", "hatch-una"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["modern_python_monorepo"]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]

[tool.hatch.build.hooks.una-build]
[tool.hatch.metadata.hooks.una-meta]
