[project]
name = "printer"
version = "0.1.0"
description = ""
authors = []
dependencies = ["greeter"]
requires-python = ">=3.13"
dynamic = ["una"]  # needed for hatch-una metadata hook to work

[project.scripts]
printer = "gpt_architecture.printer:run"

[build-system]
requires = ["hatchling", "hatch-una"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = []

[tool.uv.sources]

[tool.uv.sources.greeter]
workspace = true
[tool.hatch.build.hooks.una-build]
[tool.hatch.metadata.hooks.una-meta]
